Add total reviews in building api
